--- a/inductive.tex
+++ b/inductive.tex
@@ -161,7 +161,7 @@ The function $f$, in this case, is called \emph{regressor}.
 
 \subsection{A few remarks and definitions}
 
-\paragraph{Supervised and semissupervised learning}
+\paragraph{Supervised and semisupervised learning}
 In both cases, classification and regression, the learning task is to find the function
 that maps the input data to the output data in the best possible way.  Although the
 learning machine described generate models in a \emph{supervised} manner, there are
@@ -202,6 +202,8 @@ Note that the definition of the learning problem does not restrict the number of
 and outputs.  The input data can be a scalar, a vector, a matrix, or a tensor, and the
 output as well.  The learning machine must be able to handle the input and output data
 according to the problem.
+
+\paragraph{Parametric vs nonparametric models} \dots
 
 \section{ERM inductive principle}
 
