--- a/planning.tex
+++ b/planning.tex
@@ -1,4 +1,4 @@
-\chapter{Experimental planning}
+\chapter{Validation and experimental planning}
 \label{chap:planning}
 % TODO: change the chapter title to "Validation" or something similar
 
