--- a/references.bib
+++ b/references.bib
@@ -283,3 +283,14 @@ doi = {https://doi.org/10.1016/j.neunet.2012.11.001},
 url = {https://www.sciencedirect.com/science/article/pii/S0893608012002778},
 author = {Thiago Christiano Silva and Liang Zhao},
 }
+
+@inproceedings{Martin1997,
+  author = {Martin, Alvin F. and Doddington, George R. and Kamm, Terri and Ordowski, Mark and Przybocki, Mark A.},
+  booktitle = {EUROSPEECH},
+  editor = {Kokkinakis, George and Fakotakis, Nikos and Dermatas, Evangelos},
+  pages = {1895-1898},
+  publisher = {ISCA},
+  title = {The DET curve in assessment of detection task performance.},
+  url = {http://dblp.uni-trier.de/db/conf/interspeech/eurospeech1997.html#MartinDKOP97},
+  year = 1997
+}
