Grouped cross validation todo.

--- a/planning.tex
+++ b/planning.tex
@@ -419,4 +419,8 @@ hyperparameters in the experimental plan to make decisions about what goes to pr
 \textcolor{red}{We can unnest the search by interpreting the options as different
 algorithms two by two.}
 
+\section{Grouping}
+
+TODO Grouped cross validation.
+
 % vim: spell spelllang=en
