--- a/planning.tex
+++ b/planning.tex
@@ -10,7 +10,7 @@ Once we have defined what an inductive problem is, we can start to think about h
 solve it in practical terms.
 
 In this chapter, we present the experimental planning one can use in the data-driven
-parts of a data science project.  \emph{Experimental planing}  in the context of data
+parts of a data science project.  \emph{Experimental planning}  in the context of data
 science involves designing and organizing experiments to gather performance data
 systematically in order to reach specific goals or test hypotheses.
 
@@ -120,7 +120,8 @@ threshold.
   We call evaluation the process of assessing the performance of a solution using a
   test set.  Validation, on the other hand, is the process of interpreting or confirming
   the meaning of the evaluation results.  Validation is the process of determining the
-  degree to which the evaluation results support the intended use of the solution.
+  degree to which the evaluation results support the intended use of the solution (unseen
+  data).
 \end{mainbox}
 
 \paragraph{Interpretation}  The results are not the ``real'' performance of the solution
