Fix typo Measuments -> Measurements

--- a/data.tex
+++ b/data.tex
@@ -240,7 +240,7 @@ collection, which may lead to incorrect conclusions.
   \end{itemize}
 \end{slidebox}
 
-\subsection{Measuments}
+\subsection{Measurements}
 
 In data science, we are interested in measurable phenomena.  Measurable phenomena are
 those that we can quantify in some way.  For example, the temperature of a room is a
