--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,7 @@
 \DeclareMathOperator*{\argmin}{arg\,min}
 \DeclareMathOperator{\Prob}{P}
 \DeclareMathOperator{\E}{E}
+\DeclareMathOperator{\sign}{sign}
 
 \usepackage{cleveref}
 \newcommand\pcref[1]{(\cref{#1})}
