--- a/main.tex
+++ b/main.tex
@@ -68,6 +68,7 @@
 \makeatother
 
 \tikzset{%
+  decision/.style={draw, diamond, text centered, minimum height=0.5cm, minimum width=1cm},
   block/.style={rectangle, draw, text width=6em, text centered, rounded corners, minimum height=3em},
   darkblock/.style={block, fill=gray, text=white},
   smallblock/.style={rectangle, rounded corners, draw, font=\tiny, minimum height=1em, inner sep=2pt},
