--- a/inductive.tex
+++ b/inductive.tex
@@ -669,3 +669,40 @@ are orthogonal to the axes.  Consider the decision tree in \cref{fig:tree-and}.
 
 The $k$-nearest neighbors ($k$-NN) is a non-linear nonparametric classifier that
 generate arbitrarily complex decision boundaries by ``memoring'' the training data.
+The behavior of the boundaries depends on the value of $k$ and the distance metric one
+uses to find the nearest neighbors of a point.
+
+\begin{figurebox}[label=fig:1nn-bias]{1-NN learning bias.}
+  \centering
+  \begin{tikzpicture}
+    \begin{axis}[
+        axis x line=bottom,
+        axis y line=left,
+        xlabel={$x_1$},
+        ylabel={$x_2$},
+        width=0.6\textwidth,
+        height=0.6\textwidth,
+        xtick={0, 1},
+        ytick={0, 1},
+        grid=both,
+        xmin=-0.5, xmax=1.5,
+        ymin=-0.5, ymax=1.5,
+      ]
+      \addplot+[only marks, mark=+, mark size=3pt] coordinates {
+        (0, 0) (0, 1) (1, 0)
+      };
+      \addplot+[only marks, mark=*, mark size=3pt] coordinates {
+        (1, 1)
+      };
+      \addplot+[domain=0.5:1.5, mark=none, black, thick] {0.5};
+      \addplot+[mark=none, black, thick] coordinates {(0.5, 0.5) (0.5, 1.5)};
+    \end{axis}
+  \end{tikzpicture}
+  \tcblower
+  In this particular case, the 1-NN boundaries match the decision tree boundaries.
+\end{figurebox}
+
+As $k$ increases the boundaries become smoother:
+\href{https://images.squarespace-cdn.com/content/v1/5d782753c70af105c29a9b14/1580261947016-XODPUVKWPGGMJJMAXSNF/Screen+Shot+2020-01-28+at+8.38.55+PM.png}{example}.
+
+See illustration: \href{https://scikit-learn.org/stable/auto_examples/classification/plot_classifier_comparison.html}{here}.
