--- a/about.tex
+++ b/about.tex
@@ -41,7 +41,7 @@ Also, it is important to highlight that:
     statistics background.
   \item An artificial constraint I have imposed in the material (for the sake of the
     course) is that I only consider \emph{predictive methods}, more specifically
-    inductive ones. I not address topics such as clustering, association-rules
+    inductive ones. I do not address topics such as clustering, association-rules
     mining, transductive learning, anomaly detection, time series forecasting, reinforced
     learning, etc.
 \end{itemize}
@@ -53,14 +53,14 @@ either
     and focus on just explaining what data science is and where it is applied;
   \item too tool-centric, in the sense that they focus only on a specific toolbox or
     programming language; or
-  \item too machine-learning-y, exposing many machine learning algorithms and missing the
-    foundations of learning.
+  \item too machine-learning-y, exposing the functioning of some machine learning
+    algorithms and missing the foundations of learning and/or practical aspects.
 \end{itemize}
 
-So\dots, I expect my approach on the subject provide:
+So\dots I expect my approach on the subject provide:
 \begin{itemize}
   \item awareness of all steps in a data science project;
-  \item deeper focus (than most books) on data transformation, describing the semantics of dataset
+  \item deeper focus (than most books) on data handling, describing the semantics of dataset
     operators instead of restraining ourselves with a specific tool;
   \item deeper focus (than most books) on why machine learning works, increasing awareness of its pitfalls and
     limitations;
@@ -68,17 +68,14 @@ So\dots, I expect my approach on the subject provide:
     (pre-deployment) of machine learning models.
 \end{itemize}
 
-This book covers the following material:
+This book will probably cover the following material:
 \begin{itemize}
   \item Brief history of data science.
   \item Background topics.
   \item Fundamental data concepts.
   \item Stages in a data science project.
-  \item Data Infrastructure.
-  \item Data integration from multiple sources.
-  \item Data engineering and shaping.
+  \item Data handling.
   \item Inductive learning and principles of statistical learning theory.
-  \item Application of Machine Learning models in real-world problems.
   \item Experimental planning for data science.
   \item Model evaluation and Bayesian analysis.
   \item Documentation and deployment.
