--- a/history.tex
+++ b/history.tex
@@ -11,9 +11,16 @@ and a broad timeline of data-driven sciences highlighting the important figures 
 age.
 
 I believe that the history of the term is important to understand the context of the
-discipline.  Also, studying the main facts and figures in the history of data-driven
-sciences is important to understand the evolution of the field and hopefully to guide us
-to evolve it further.
+discipline.  Along the years, the term has been used to label rather different fields of
+study.  Before I present my view on the term, I present the views of two important
+figures in the history of data science: Peter Naur and William Cleveland.
+
+Moreover, studying the main facts and figures in the history of data-driven sciences
+enables us to understand the evolution of the field and hopefully to guide us to evolve it
+further.  Most of the important theories and methods in data science have been developed
+simultaneously in different fields, such as statistics, computer science, and engineering.
+The history of data-driven sciences is long and rich. I present a timeline of the ages of
+data handling and the most important markers of data analysis.
 
 \begin{mainbox}{Chapter remarks}
   \boxsubtitle{Context}
@@ -38,6 +45,7 @@ to evolve it further.
   \end{itemize}
 \end{mainbox}
 
+\newpage
 \section{The term ``data science''}
 
 The term data science is recent and has been used to label rather different fields of
