--- a/main.tex
+++ b/main.tex
@@ -151,7 +151,7 @@
 }
 
 \newtcbtheorem[auto counter, number within=chapter]{slidebox}{Slide}{
-  float=th,
+  float=p,
   colframe=blue!50!white,
   base
 }{sld}
@@ -187,7 +187,7 @@
 
 \renewcommand{\vec}[1]{\mathbf{#1}}
 
-\title{Data science continuum: from foundations to practices}
+\title{Data science project: an inductive learning approach}
 \author{Filipe A. N. Verri}
 
 \hypersetup{%
@@ -205,8 +205,8 @@
     \node[anchor=south east, inner sep=0mm] at (current page.south east) {%
       \reflectbox{\includegraphics[width=\paperwidth]{images/bard2.jpg}}%
     };
-    \node[white,anchor=north, yshift=-25mm](title) at (current page.north) {\HUGE\sffamily\uppercase{Data science continuum}};
-    \node[white,anchor=north, inner sep=5mm] at (title.south) {\LARGE\sffamily\uppercase{from foundations to practices}};
+    \node[white,anchor=north, yshift=-25mm](title) at (current page.north) {\HUGE\sffamily\uppercase{Data science project}};
+    \node[white,anchor=north, inner sep=5mm] at (title.south) {\LARGE\sffamily\uppercase{an inductive learning approach}};
     \node[anchor=south west, inner sep=11mm] at (current page.south west) {\HUGE\sffamily\uppercase{F.A.N. Verri}};
   \end{tikzpicture}
 \end{titlingpage}
@@ -221,8 +221,8 @@
     \reflectbox{\includegraphics[height=0.6\paperheight]{images/toucan_bw.png}}%
   };
   \node[anchor=south east, inner sep=10mm] at (current page.south east) {\large\sffamily\textcolor{black!60}\today};
-  \node[anchor=north, yshift=-25mm](title) at (current page.north) {\HUGE\sffamily\uppercase{Data science continuum}};
-  \node[anchor=north, inner sep=5mm](subtitle) at (title.south) {\LARGE\sffamily\uppercase{from foundations to practices}};
+  \node[anchor=north, yshift=-25mm](title) at (current page.north) {\HUGE\sffamily\uppercase{Data science project}};
+  \node[anchor=north, inner sep=5mm](subtitle) at (title.south) {\LARGE\sffamily\uppercase{an inductive learning approach}};
   \node[anchor=north, inner sep=5mm] at (subtitle.south) {\Large\sffamily\uppercase{Filipe A. N. Verri}};
   \node[red,anchor=south west, inner sep=11mm] at (current page.south west) {\HUGE\sffamily WIP};
 \end{tikzpicture}
